--- a/index.html
+++ b/index.html
@@ -2,11 +2,98 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт</title>
   </head>
   <body>
+    <header class="main-header">
+      <img src="img/logo.png" alt="Логотип интернет-магазина «Техномарт»">
+      <!--Здесь будет форма поиска-->
+      <ul class="purchase">
+        <li><a href="#">Закладки: 0</a></li>
+        <li><a href="#">Корзина: 0</a></li>
+        <li><a href="#">Оформить заказ</a></li>
+      </ul>
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <p class="header-contacts">
+        <span class="phone">+7 (812) 555-05-55</span>
+        <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+      </p>
+      <ul class="authorization">
+        <li><a class="button button-authorization">Войти</a></li>
+        <li><a class="button button-authorization">Регистрация</a></li>
+      </ul>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="company.html">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="specialoffer.html">Спецпредложения</a></li>
+          <li><a href="delivery.html">Доставка</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <!--Промо-блок-->
+      <!--Популярные товары-->
+      <!--Популярные производители-->
+      <!--Сервисы-->
+      <section class="about">
+	      <h2>Компания «Техномарт»</h2>
+	      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+	      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p> 
+	      <ul class="delivery-list">
+		      <li>Деловые линии</li>
+		      <li>Автотрейдинг</li>
+		      <li>ЖелДорЭкспедиция</li>
+	      </ul>	
+	      <a class="button" href="#">Подробнее о компании</a>
+	    </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <a href="#"><img src="img/map.jpg" alt="Схема проезда"></a>
+        <a class="button" href="#">Заблудились? Напишите нам!</a>
+      </section>
+    </main>
+    <footer>
+      <img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
+      <p class="footer-contacts">
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+        +7 (812) 555-05-55
+      </p>
+      <ul class="footer-navigation">
+        <li><a href="company.html">Компания</a></li>
+        <li><a href="news.html">Новости</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="delivery.html">Доставка</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+      </ul>
+      <ul class="sections">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+      <p class="footer-copyright">
+        © 2010–2019 Компания «Техномарт»<br>
+        Все права защищены
+      </p>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p class="footer-feedback">
+        Обратная связь: mail@htmlacademy.ru
+      </p>
+      <p class="footer-develop">
+        Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+      </p>
+    </footer>
   </body>
 </html>
