Внесены изменения в разметку главной и каталога

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <li><a href="#">Корзина: 10</a></li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <p class="index-page-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
       <p class="header-contacts">
         <span class="phone">+7 (812) 555-05-55</span>
         <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
@@ -44,20 +44,20 @@
         <li><a href="#">Перфораторы</a></li>
       </ul>
 
-      <h2 class="page-title">Перфораторы</h2>
+      <h1 class="page-title">Перфораторы</h1>
 
       <section class="filters">
-        <h3 class="visually-hidden">Фильтр товаров</h3>
+        <h2 class="visually-hidden">Фильтр товаров</h2>
         <!--Здесь будет форма-->
       </section>
 
       <section class="catalog">
-        <h3 class="visually-hidden">Список перфораторов</h3>
+        <h2 class="visually-hidden">Список перфораторов</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <h4>
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 3000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-3.png" alt="Перфоратор BOSCH BFG 3000"></a>
             </p>
@@ -71,9 +71,9 @@
             </p>
           </li>
           <li class="catalog-item">
-            <h4>
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 6000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-6.png" alt="Перфоратор BOSCH BFG 6000"></a>
             </p>
@@ -87,9 +87,10 @@
             </p>
           </li>
           <li class="catalog-item">
-            <h4>
+						<span class="new-product">New</span>
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 2000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-2.png" alt="Перфоратор BOSCH BFG 2000"></a>
             </p>
@@ -102,9 +103,9 @@
             </p>
           </li>
           <li class="catalog-item">
-            <h4>
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 3000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-3.png" alt="Перфоратор BOSCH BFG 3000"></a>
             </p>
@@ -118,9 +119,10 @@
             </p>
           </li>
           <li class="catalog-item">
-            <h4>
+						<span class="new-product">New</span>
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 6000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-6.png" alt="Перфоратор BOSCH BFG 6000"></a>
             </p>
@@ -134,9 +136,9 @@
             </p>
           </li>
           <li class="catalog-item">
-            <h4>
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 2000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-2.png" alt="Перфоратор BOSCH BFG 2000"></a>
             </p>
@@ -149,9 +151,10 @@
             </p>
           </li>
           <li class="catalog-item">
-            <h4>
+						<span class="new-product">New</span>	
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 3000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-3.png" alt="Перфоратор BOSCH BFG 3000"></a>
             </p>
@@ -165,9 +168,9 @@
             </p>
           </li>
           <li class="catalog-item">
-            <h4>
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 6000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-6.png" alt="Перфоратор BOSCH BFG 6000"></a>
             </p>
@@ -181,9 +184,9 @@
             </p>
           </li>
           <li class="catalog-item">
-            <h4>
+            <h3>
               <a href="#">Перфоратор BOSCH BFG 2000</a>
-            </h4>
+            </h3>
             <p class="catalog-item-image">
               <a href="#"><img src="img/bosch-bfg-2.png" alt="Перфоратор BOSCH BFG 3000"></a>
             </p>
@@ -205,7 +208,7 @@
       </section>
 
       <section class="description">
-        <h3>Пара слов о перфораторах</h3>
+        <h2>Пара слов о перфораторах</h2>
         <p>
           Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
           Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
@@ -213,11 +216,13 @@
         </p>
       </section>
     </main>
-    <footer>
-      <img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
+    <footer class="main-footer">
+      <a class="footer-logo">
+				<img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
+			</a>
       <p class="footer-contacts">
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-        +7 (812) 555-05-55
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
       </p>
       <ul class="footer-navigation">
         <li><a href="company.html">Компания</a></li>
@@ -236,15 +241,13 @@
         © 2010–2019 Компания «Техномарт»<br>
         Все права защищены
       </p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
-      </div>
+      <ul class="footer-social">
+        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+      </ul>
       <p class="footer-feedback">
-        Обратная связь: mail@htmlacademy.ru
+        Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       </p>
       <p class="footer-develop">
         Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
