--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
   </head>
   <body>
     <header class="main-header">
-      <img src="img/logo.png" alt="Логотип интернет-магазина «Техномарт»">
+      <a class="main-header-logo" href="#">
+				<img src="img/logo.png" alt="Логотип интернет-магазина «Техномарт»">
+			</a>
       <!--Здесь будет форма поиска-->
       <ul class="purchase">
         <li><a href="#">Закладки: 0</a></li>
         <li><a href="#">Корзина: 0</a></li>
         <li><a href="#">Оформить заказ</a></li>
       </ul>
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <h1 class="index-page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
       <p class="header-contacts">
-        <span class="phone">+7 (812) 555-05-55</span>
+        <span class="phone">
+					<a href="tel:+78125550555">+7 (812) 555-05-55</a>
+				</span>
         <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
       </p>
       <ul class="authorization">
@@ -58,11 +62,13 @@
         <a class="button" href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
-    <footer>
-      <img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
+    <footer class="main-footer">
+      <a class="footer-logo" href="#">
+				<img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
+			</a>
       <p class="footer-contacts">
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-        +7 (812) 555-05-55
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
       </p>
       <ul class="footer-navigation">
         <li><a href="company.html">Компания</a></li>
@@ -80,16 +86,14 @@
       <p class="footer-copyright">
         © 2010–2019 Компания «Техномарт»<br>
         Все права защищены
-      </p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
-      </div>
+      </p>      
+      <ul class="footer-social">
+        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+			</ul>
       <p class="footer-feedback">
-        Обратная связь: mail@htmlacademy.ru
+        Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       </p>
       <p class="footer-develop">
         Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
