Исправлены ссылки в header и footer

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,9 @@
   </head>
   <body>
 	  <header class="main-header">
-      <a href="index.html"><img src="img/logo.png" alt="Логотип интернет-магазина «Техномарт»"></a>
+      <a class="main-header-logo" href="index.html">
+				<img src="img/logo.png" alt="Логотип интернет-магазина «Техномарт»">
+			</a>
       <!--Здесь будет форма поиска-->
       <ul class="purchase">
         <li><a href="#">Закладки: 0</a></li>
@@ -217,7 +219,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <a class="footer-logo">
+      <a class="footer-logo" href="index.html">
 				<img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
 			</a>
       <p class="footer-contacts">
