--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="main-header-logo" href="#">
+      <a class="main-header-logo">
 				<img src="img/logo.png" alt="Логотип интернет-магазина «Техномарт»">
 			</a>
       <!--Здесь будет форма поиска-->
@@ -63,7 +63,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <a class="footer-logo" href="#">
+      <a class="footer-logo">
 				<img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
 			</a>
       <p class="footer-contacts">
