Размечены недостающие секции
Добавлены секции: промо-блок со слайдером, популярные товары, популярные производители, сервисы со слайдером.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,211 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <!--Промо-блок-->
-      <!--Популярные товары-->
-      <!--Популярные производители-->
-      <!--Сервисы-->
+    <main>			
+			<section class="promo">				
+				<h2 class="visually-hidden">Категории товаров и услуг</h2>
+				<ul class="categories">
+					<li>
+						<h3>Материалы</h3>
+						<a class="button button-promo" href="#">На любой вкус</a>
+						<span class="new-product">New</span>
+					</li>
+					<li>
+						<h3>Инструмент</h3>
+						<a class="button button-promo" href="#">На все случаи</a>
+					</li>
+					<li>
+						<h3>Техника</h3>
+						<a class="button button-promo" href="#">Для стройки</a>
+					</li>
+					<li>
+						<h3>Скидки 50%</h3>
+						<a class="button button-promo" href="#">На 350 товаров</a>
+					</li>
+					<li>
+						<h3>Доставка</h3>
+						<a class="button button-promo" href="#">Бесплатно</a>
+					</li>
+				</ul>
+
+				<div class="carousel-products">
+					<h2 class="visualy-hidden">Промо-блок</h2>
+					<ul class="slides">
+						<li class="slides-item">
+							<dl class="promo-text">
+								<dt>Дрели</dt> 
+								<dd>Соседям на радость!</dd>
+							</dl>
+							<img src="img/drill-promo.jpg" alt="Промо-изображение дрелей BOSCH">
+							<a class="button" href="catalog.html">Открыть каталог</a>
+						</li>
+						<li class="slides-item">
+							<dl class="promo-text">
+								<dt>Перфораторы</dt>
+								<dd>Настоящие мужские игрушки</dd>
+							</dl>
+							<img src="img/perforator-promo.jpg" alt="Промо-изображение перфораторов BOSCH">
+							<a class="button" href="catalog.html">Открыть каталог</a>
+						</li>
+					</ul>
+					<ul class="slides-control">
+						<li class="slides-control-item">
+							<button class="slide-btn-back">&lt;</button>
+						</li>
+						<li class="slides-control-item">
+							<button class="slide-btn-next">&gt;</button>
+						</li>
+					</ul>					
+				</div>
+			</section>
+						
+			<section class="popular-products">
+				<h2>Популярные товары</h2>
+				<a class="button" href="#">Все популярные товары</a>
+				<ul class="popular-products-list">					
+					<li class="catalog-item">
+						<h3>
+							<a href="#">Перфоратор BOSCH BFG 9000</a>
+						</h3>
+						<p class="catalog-item-image">
+							<a href="#"><img src="img/bosch-bfg-9.png" alt="Перфоратор BOSCH BFG 9000"></a>
+						</p>
+						<p class="catalog-item-price">
+							<span class="old-price">32500 Р.</span>
+							<span class="price">25500 Р.</span>
+						</p>
+						<p class="catalog-item-order">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3>
+							<a href="#">Перфоратор BOSCH BFG 3000</a>
+						</h3>
+						<p class="catalog-item-image">
+							<a href="#"><img src="img/bosch-bfg-3.png" alt="Перфоратор BOSCH BFG 3000"></a>
+						</p>
+						<p class="catalog-item-price">
+							<span class="old-price">22500 Р.</span>
+							<span class="price">15500 Р.</span>
+						</p>
+						<p class="catalog-item-order">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3>
+							<a href="#">Перфоратор BOSCH BFG 6000</a>
+						</h3>
+						<p class="catalog-item-image">
+							<a href="#"><img src="img/bosch-bfg-6.png" alt="Перфоратор BOSCH BFG 6000"></a>
+						</p>
+						<p class="catalog-item-price">
+							<span class="old-price">30500 Р.</span>
+							<span class="price">25500 Р.</span>
+						</p>
+						<p class="catalog-item-order">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<span class="new-product">New</span>
+						<h3>
+							<a href="#">Перфоратор BOSCH BFG 2000</a>
+						</h3>
+						<p class="catalog-item-image">
+							<a href="#"><img src="img/bosch-bfg-2.png" alt="Перфоратор BOSCH BFG 3000"></a>
+						</p>
+						<p class="catalog-item-price">              
+							<span class="price">12500 Р.</span>
+						</p>
+						<p class="catalog-item-order">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</p>
+					</li>
+				</ul>
+			</section>
+
+			<section class="popular-brands">
+				<h2>Популярные производители</h2>
+				<a class="button" href="#">Все производители</a>
+				<ul class="popular-brands-list">
+					<li class="popular-brand-item">
+						<a href="#"><img src="img/bosch.png" alt="BOSCH"></a>
+					</li>
+					<li class="popular-brand-item">
+						<a href="#"><img src="img/makita.png" alt="Makita"></a>
+					</li>
+					<li class="popular-brand-item">
+						<a href="#"><img src="img/dewalt.png" alt="DeWALT"></a>
+					</li>
+					<li class="popular-brand-item">
+						<a href="#"><img src="img/interskol.png" alt="ИНТЕРСКОЛ"></a>
+					</li>
+					<li class="popular-brand-item">
+						<a href="#"><img src="img/hitachi.png" alt="HITACHI"></a>
+					</li>
+					<li class="popular-brand-item">
+						<a href="#"><img src="img/lg.png" alt="LG"></a>
+					</li>
+					<li class="popular-brand-item">
+						<a href="#"><img src="img/aeg.png" alt="AEG"></a>
+					</li>
+					<li class="popular-brand-item">
+						<a href="#"><img src="img/" alt="Metabo"></a>
+					</li>
+				</ul>
+			</section>
+
+			<section class="services">
+				<h2>Сервисы</h2>
+				<p>
+					Хороший интернет-магазин отличается от плохого не только ценами!
+					Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+				</p>
+				
+				<div class="carousel-services">
+					<ul class="slides">
+						<li class="slides-item">
+							<h3>Доставка</h3>
+							<p>
+									Мы с удовольствием доставим ваш товар прямо	к вашему подъезду совершенно бесплатно!
+									Ведь мы неплохо заработаем, поднимая его на ваш этаж!
+							</p>
+						</li>
+						<li class="slides-item">
+							<h3>Гарантия</h3>
+							<p>
+								Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,	
+								вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
+							</p>
+						</li>
+						<li class="slides-item">
+							<h3>Кредит</h3>
+							<p>
+								Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
+							</p>
+							<a class="button" href="#">Отправить заявку</a>
+						</li>
+					</ul>
+					<ul class="slides-control">
+						<li class="slides-control-item">
+							<button class="slide-btn slide-btn-current">Доставка</button>
+						</li>
+						<li class="slides-control-item">
+							<button class="slide-btn">Гарантия</button>
+						</li>
+						<li class="slides-control-item">
+							<button class="slide-btn">Кредит</button>
+						</li>
+					</ul>
+				</div>
+			</section>
+
       <section class="about">
 	      <h2>Компания «Техномарт»</h2>
 	      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
