Доработаны разметки главной и каталога
Скорректированы слайдеры главной страницы, включая имена классов.
В каталоге добавлена сортировка.

--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,18 @@
       </section>
 
       <section class="catalog">
-        <h2 class="visually-hidden">Список перфораторов</h2>
+				<h2 class="visually-hidden">Список перфораторов</h2>
+				<h3>Сортировка:</h3>
+				<ul class="sorting-type">
+					<li><a class="sorting sorting-type-active" href="#">По цене</a></li>
+					<li><a class="sorting" href="#">По типу</a></li>
+					<li><a class="sorting" href="#">По функционалу</a></li>
+				</ul>
+				<ul class="sorting-order">
+					<li><a class="ascending-order sorting-order-active" href="#">По возрастанию</a></li>
+					<li><a class="descending-order" href="#">По убыванию</a></li>
+				</ul>
+
         <ul class="catalog-list">
           <li class="catalog-item">
             <h3>
@@ -200,7 +211,8 @@
               <a href="#">В закладки</a>
             </p>
           </li>
-        </ul>
+				</ul>
+				
         <ul class="pagination-list">
           <li class="pagination-item pagination-item-current">1</li>
           <li class="pagination-item"><a href="#">2</a></li>
