--- a/index.html
+++ b/index.html
@@ -63,37 +63,36 @@
 						<h3>Доставка</h3>
 						<a class="button button-promo" href="#">Бесплатно</a>
 					</li>
-				</ul>
-
-				<div class="carousel-products">
-					<h2 class="visualy-hidden">Промо-блок</h2>
-					<ul class="slides">
-						<li class="slides-item">
-							<dl class="promo-text">
-								<dt>Дрели</dt> 
-								<dd>Соседям на радость!</dd>
-							</dl>
-							<img src="img/drill-promo.jpg" alt="Промо-изображение дрелей BOSCH">
-							<a class="button" href="catalog.html">Открыть каталог</a>
-						</li>
-						<li class="slides-item">
-							<dl class="promo-text">
-								<dt>Перфораторы</dt>
-								<dd>Настоящие мужские игрушки</dd>
-							</dl>
-							<img src="img/perforator-promo.jpg" alt="Промо-изображение перфораторов BOSCH">
-							<a class="button" href="catalog.html">Открыть каталог</a>
-						</li>
-					</ul>
-					<ul class="slides-control">
-						<li class="slides-control-item">
+					<li>
+						<div class="products-carousel">
+							<h2 class="visualy-hidden">Спецпредложения</h2>														
+							<ul class="products-slides">
+								<li class="products-slides-item">									
+									<h3 class="promo-heading">Дрели</h3> 
+									<p class="promo-text">Соседям на радость!</p>									
+									<img src="img/drill-promo.jpg" alt="Промо-изображение дрелей BOSCH">
+									<a class="button" href="catalog.html">Открыть каталог</a>
+								</li>
+								<li class="products-slides-item">									
+									<h3 class="promo-heading">Перфораторы</h3>
+									<p class="promo-text">Настоящие мужские игрушки</p>								
+									<img src="img/perforator-promo.jpg" alt="Промо-изображение перфораторов BOSCH">
+									<a class="button" href="catalog.html">Открыть каталог</a>
+								</li>
+							</ul>							
+							<ul class="slides-switches">
+								<li class="slide-radio">
+									<button class="slide-control">1</button>
+								</li>
+								<li class="slide-radio slide-radio-active">
+									<button class="slide-control">2</button>
+								</li>
+							</ul>
 							<button class="slide-btn-back">&lt;</button>
-						</li>
-						<li class="slides-control-item">
 							<button class="slide-btn-next">&gt;</button>
-						</li>
-					</ul>					
-				</div>
+						</div>
+					</li>
+				</ul>
 			</section>
 						
 			<section class="popular-products">
@@ -205,41 +204,41 @@
 					Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
 				</p>
 				
-				<div class="carousel-services">
-					<ul class="slides">
-						<li class="slides-item">
+				<div class="services-carousel">
+					<ul class="services-control">
+						<li class="services-control-item">
+							<button class="slide-btn slide-btn-current">Доставка</button>
+						</li>
+						<li class="services-control-item">
+							<button class="slide-btn">Гарантия</button>
+						</li>
+						<li class="services-control-item">
+							<button class="slide-btn">Кредит</button>
+						</li>
+					</ul>
+					<ul class="services-slides">
+						<li class="services-slides-item">
 							<h3>Доставка</h3>
 							<p>
 									Мы с удовольствием доставим ваш товар прямо	к вашему подъезду совершенно бесплатно!
 									Ведь мы неплохо заработаем, поднимая его на ваш этаж!
 							</p>
 						</li>
-						<li class="slides-item">
+						<li class="services-slides-item">
 							<h3>Гарантия</h3>
 							<p>
 								Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,	
 								вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
 							</p>
 						</li>
-						<li class="slides-item">
+						<li class="services-slides-item">
 							<h3>Кредит</h3>
 							<p>
 								Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
 							</p>
 							<a class="button" href="#">Отправить заявку</a>
 						</li>
-					</ul>
-					<ul class="slides-control">
-						<li class="slides-control-item">
-							<button class="slide-btn slide-btn-current">Доставка</button>
-						</li>
-						<li class="slides-control-item">
-							<button class="slide-btn">Гарантия</button>
-						</li>
-						<li class="slides-control-item">
-							<button class="slide-btn">Кредит</button>
-						</li>
-					</ul>
+					</ul>					
 				</div>
 			</section>
 
