--- a/catalog.html
+++ b/catalog.html
@@ -54,17 +54,19 @@
       </section>
 
       <section class="catalog">
-				<h2 class="visually-hidden">Список перфораторов</h2>
-				<h3>Сортировка:</h3>
-				<ul class="sorting-type">
-					<li><a class="sorting sorting-type-active" href="#">По цене</a></li>
-					<li><a class="sorting" href="#">По типу</a></li>
-					<li><a class="sorting" href="#">По функционалу</a></li>
-				</ul>
-				<ul class="sorting-order">
-					<li><a class="ascending-order sorting-order-active" href="#">По возрастанию</a></li>
-					<li><a class="descending-order" href="#">По убыванию</a></li>
-				</ul>
+				<div class="catalog-sorting">
+					<h2 class="visually-hidden">Список перфораторов</h2>
+					<h3>Сортировка:</h3>
+					<ul class="sorting-type">
+						<li><a class="sorting sorting-type-active" href="#">По цене</a></li>
+						<li><a class="sorting" href="#">По типу</a></li>
+						<li><a class="sorting" href="#">По функционалу</a></li>
+					</ul>
+					<ul class="sorting-order">
+						<li><a class="ascending-order sorting-order-active" href="#">По возрастанию</a></li>
+						<li><a class="descending-order" href="#">По убыванию</a></li>
+					</ul>
+				</div>
 
         <ul class="catalog-list">
           <li class="catalog-item">
