--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
 	  <header class="main-header">
       <a class="main-header-logo" href="index.html">
-				<img src="img/logo.png" alt="Логотип интернет-магазина «Техномарт»">
+				<img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
 			</a>
       <!--Здесь будет форма поиска-->
       <ul class="purchase">
@@ -234,7 +234,7 @@
     </main>
     <footer class="main-footer">
       <a class="footer-logo" href="index.html">
-				<img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
+				<img src="img/logo-technomart.svg" width="137" height="22" alt="Логотип интернет-магазина «Техномарт»">
 			</a>
       <p class="footer-contacts">
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
