--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <a class="main-header-logo">
-				<img src="img/logo.png" alt="Логотип интернет-магазина «Техномарт»">
+				<img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
 			</a>
       <!--Здесь будет форма поиска-->
       <ul class="purchase">
@@ -70,13 +70,13 @@
 								<li class="products-slides-item">									
 									<h3 class="promo-heading">Дрели</h3> 
 									<p class="promo-text">Соседям на радость!</p>									
-									<img src="img/drill-promo.jpg" alt="Промо-изображение дрелей BOSCH">
+									<img src="img/promo-1.jpg" width="620" height="266" alt="Промо-изображение дрелей BOSCH">
 									<a class="button" href="catalog.html">Открыть каталог</a>
 								</li>
 								<li class="products-slides-item">									
 									<h3 class="promo-heading">Перфораторы</h3>
 									<p class="promo-text">Настоящие мужские игрушки</p>								
-									<img src="img/perforator-promo.jpg" alt="Промо-изображение перфораторов BOSCH">
+									<img src="img/promo-2.jpg" width="620" height="266" alt="Промо-изображение перфораторов BOSCH">
 									<a class="button" href="catalog.html">Открыть каталог</a>
 								</li>
 							</ul>							
@@ -104,7 +104,7 @@
 							<a href="#">Перфоратор BOSCH BFG 9000</a>
 						</h3>
 						<p class="catalog-item-image">
-							<a href="#"><img src="img/bosch-bfg-9.png" alt="Перфоратор BOSCH BFG 9000"></a>
+							<a href="#"><img src="img/bosch-bfg-9.png" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
 						</p>
 						<p class="catalog-item-price">
 							<span class="old-price">32500 Р.</span>
@@ -120,7 +120,7 @@
 							<a href="#">Перфоратор BOSCH BFG 3000</a>
 						</h3>
 						<p class="catalog-item-image">
-							<a href="#"><img src="img/bosch-bfg-3.png" alt="Перфоратор BOSCH BFG 3000"></a>
+							<a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
 						</p>
 						<p class="catalog-item-price">
 							<span class="old-price">22500 Р.</span>
@@ -136,7 +136,7 @@
 							<a href="#">Перфоратор BOSCH BFG 6000</a>
 						</h3>
 						<p class="catalog-item-image">
-							<a href="#"><img src="img/bosch-bfg-6.png" alt="Перфоратор BOSCH BFG 6000"></a>
+							<a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
 						</p>
 						<p class="catalog-item-price">
 							<span class="old-price">30500 Р.</span>
@@ -153,7 +153,7 @@
 							<a href="#">Перфоратор BOSCH BFG 2000</a>
 						</h3>
 						<p class="catalog-item-image">
-							<a href="#"><img src="img/bosch-bfg-2.png" alt="Перфоратор BOSCH BFG 3000"></a>
+							<a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
 						</p>
 						<p class="catalog-item-price">              
 							<span class="price">12500 Р.</span>
@@ -171,28 +171,28 @@
 				<a class="button" href="#">Все производители</a>
 				<ul class="popular-brands-list">
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/bosch.png" alt="BOSCH"></a>
+						<a href="#"><img src="img/bosch.png" width="126" height="37" alt="BOSCH"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/makita.png" alt="Makita"></a>
+						<a href="#"><img src="img/makita.png" width="123" height="40" alt="Makita"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/dewalt.png" alt="DeWALT"></a>
+						<a href="#"><img src="img/dewalt.png" width="146" height="44" alt="DeWALT"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/interskol.png" alt="ИНТЕРСКОЛ"></a>
+						<a href="#"><img src="img/interskol.png" width="200" height="88" alt="ИНТЕРСКОЛ"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/hitachi.png" alt="HITACHI"></a>
+						<a href="#"><img src="img/hitachi.png" width="169" height="31" alt="HITACHI"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/lg.png" alt="LG"></a>
+						<a href="#"><img src="img/lg.png" width="121" height="73" alt="LG"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/aeg.png" alt="AEG"></a>
+						<a href="#"><img src="img/aeg.png" width="151" height="96" alt="AEG"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/" alt="Metabo"></a>
+						<a href="#"><img src="img/metabo.png" width="204" height="69" alt="Metabo"></a>
 					</li>
 				</ul>
 			</section>
@@ -257,13 +257,13 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a href="#"><img src="img/map.jpg" alt="Схема проезда"></a>
+        <a href="#"><img src="img/map.png" alt="Схема проезда"></a>
         <a class="button" href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
     <footer class="main-footer">
       <a class="footer-logo">
-				<img src="img/footer-logo.png" alt="Логотип интернет-магазина «Техномарт»">
+				<img src="img/logo-technomart.svg" width="137" height="22" alt="Логотип интернет-магазина «Техномарт»">
 			</a>
       <p class="footer-contacts">
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
