--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
       <a class="main-header-logo">
 				<img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
 			</a>
-      <!--Здесь будет форма поиска-->
+      <form class="search-form" method="get" action="#">
+				<label>
+					Поиск:
+					<input type="search" placeholder="Перфоратор">
+				</label>
+			</form>
       <ul class="purchase">
         <li><a href="#">Закладки: 0</a></li>
         <li><a href="#">Корзина: 0</a></li>
@@ -23,8 +28,8 @@
         <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
       </p>
       <ul class="authorization">
-        <li><a class="button button-authorization">Войти</a></li>
-        <li><a class="button button-authorization">Регистрация</a></li>
+        <li><a class="button button-authorization" href="login.html">Войти</a></li>
+        <li><a class="button button-authorization" href="signup.html">Регистрация</a></li>
       </ul>
       <nav class="main-navigation">
         <ul class="site-navigation">
@@ -38,8 +43,8 @@
         </ul>
       </nav>
     </header>
-    <main>			
-			<section class="promo">				
+    <main>
+			<section class="promo">
 				<h2 class="visually-hidden">Категории товаров и услуг</h2>
 				<ul class="categories">
 					<li>
@@ -65,21 +70,21 @@
 					</li>
 					<li>
 						<div class="products-carousel">
-							<h2 class="visualy-hidden">Спецпредложения</h2>														
+							<h2 class="visualy-hidden">Спецпредложения</h2>
 							<ul class="products-slides">
-								<li class="products-slides-item">									
-									<h3 class="promo-heading">Дрели</h3> 
-									<p class="promo-text">Соседям на радость!</p>									
+								<li class="products-slides-item">
+									<h3 class="promo-heading">Дрели</h3>
+									<p class="promo-text">Соседям на радость!</p>
 									<img src="img/promo-1.jpg" width="620" height="266" alt="Промо-изображение дрелей BOSCH">
 									<a class="button" href="catalog.html">Открыть каталог</a>
 								</li>
-								<li class="products-slides-item">									
+								<li class="products-slides-item">
 									<h3 class="promo-heading">Перфораторы</h3>
-									<p class="promo-text">Настоящие мужские игрушки</p>								
+									<p class="promo-text">Настоящие мужские игрушки</p>
 									<img src="img/promo-2.jpg" width="620" height="266" alt="Промо-изображение перфораторов BOSCH">
 									<a class="button" href="catalog.html">Открыть каталог</a>
 								</li>
-							</ul>							
+							</ul>
 							<ul class="slides-switches">
 								<li class="slide-radio">
 									<button class="slide-control">1</button>
@@ -94,11 +99,11 @@
 					</li>
 				</ul>
 			</section>
-						
+
 			<section class="popular-products">
 				<h2>Популярные товары</h2>
 				<a class="button" href="#">Все популярные товары</a>
-				<ul class="popular-products-list">					
+				<ul class="popular-products-list">
 					<li class="catalog-item">
 						<h3>
 							<a href="#">Перфоратор BOSCH BFG 9000</a>
@@ -155,7 +160,7 @@
 						<p class="catalog-item-image">
 							<a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
 						</p>
-						<p class="catalog-item-price">              
+						<p class="catalog-item-price">
 							<span class="price">12500 Р.</span>
 						</p>
 						<p class="catalog-item-order">
@@ -171,28 +176,28 @@
 				<a class="button" href="#">Все производители</a>
 				<ul class="popular-brands-list">
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/bosch.png" width="126" height="37" alt="BOSCH"></a>
+						<a href="#"><img src="img/bosch.png" width="126" height="37" alt="Логотип BOSCH"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/makita.png" width="123" height="40" alt="Makita"></a>
+						<a href="#"><img src="img/makita.png" width="123" height="40" alt="Логотип Makita"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/dewalt.png" width="146" height="44" alt="DeWALT"></a>
+						<a href="#"><img src="img/dewalt.png" width="146" height="44" alt="Логотип DeWALT"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/interskol.png" width="200" height="88" alt="ИНТЕРСКОЛ"></a>
+						<a href="#"><img src="img/interskol.png" width="200" height="88" alt="Логотип ИНТЕРСКОЛ"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/hitachi.png" width="169" height="31" alt="HITACHI"></a>
+						<a href="#"><img src="img/hitachi.png" width="169" height="31" alt="Логотип HITACHI"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/lg.png" width="121" height="73" alt="LG"></a>
+						<a href="#"><img src="img/lg.png" width="121" height="73" alt="Логотип LG"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/aeg.png" width="151" height="96" alt="AEG"></a>
+						<a href="#"><img src="img/aeg.png" width="151" height="96" alt="Логотип AEG"></a>
 					</li>
 					<li class="popular-brand-item">
-						<a href="#"><img src="img/metabo.png" width="204" height="69" alt="Metabo"></a>
+						<a href="#"><img src="img/metabo.png" width="204" height="69" alt="Логотип Metabo"></a>
 					</li>
 				</ul>
 			</section>
@@ -203,7 +208,7 @@
 					Хороший интернет-магазин отличается от плохого не только ценами!
 					Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
 				</p>
-				
+
 				<div class="services-carousel">
 					<ul class="services-control">
 						<li class="services-control-item">
@@ -227,7 +232,7 @@
 						<li class="services-slides-item">
 							<h3>Гарантия</h3>
 							<p>
-								Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,	
+								Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,
 								вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
 							</p>
 						</li>
@@ -238,26 +243,26 @@
 							</p>
 							<a class="button" href="#">Отправить заявку</a>
 						</li>
-					</ul>					
+					</ul>
 				</div>
 			</section>
 
       <section class="about">
 	      <h2>Компания «Техномарт»</h2>
 	      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-	      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p> 
+	      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
 	      <ul class="delivery-list">
 		      <li>Деловые линии</li>
 		      <li>Автотрейдинг</li>
 		      <li>ЖелДорЭкспедиция</li>
-	      </ul>	
+	      </ul>
 	      <a class="button" href="#">Подробнее о компании</a>
 	    </section>
 
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a href="#"><img src="img/map.png" alt="Схема проезда"></a>
+        <a href="#"><img src="img/map.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
         <a class="button" href="#">Заблудились? Напишите нам!</a>
       </section>
     </main>
@@ -283,9 +288,9 @@
         <li><a href="#">Спецпредложения</a></li>
       </ul>
       <p class="footer-copyright">
-        © 2010–2019 Компания «Техномарт»<br>
+        &copy; 2010–2019 Компания «Техномарт»<br>
         Все права защищены
-      </p>      
+      </p>
       <ul class="footer-social">
         <li><a class="social-button" href="#">Вконтакте</a></li>
         <li><a class="social-button" href="#">Фейсбук</a></li>
@@ -298,5 +303,30 @@
         Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
       </p>
     </footer>
+
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <img src="img/map-big.png" width="960" height="446" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+      <button class="modal-close" type="button">Закрыть</button>
+    </section>
+
+    <section class="modal modal-write-us">
+      <h2 class="visually-hidden">Обратная связь</h2>
+      <form class="write-us-form" method="post" action="#">
+        <p>
+          <label for="write-us-name">Ваше имя:</label>
+          <input type="text" name="name" placeholder="Имя Фамилия" id="write-us-name">
+        </p>
+        <p>
+          <label for="write-us-email">Ваш e-mail:</label>
+          <input type="text" name="email" placeholder="email@example.com" id="write-us-email">
+        </p>
+        <p>Текст письма:<br>
+          <textarea class="write-us-field" name="text">В свободной форме</textarea>
+        </p>
+        <button class="button" type="submit">Отправить</button>
+        <button class="modal-close" type="button">Закрыть</button>
+      </form>
+    </section>
   </body>
 </html>
