--- a/catalog.html
+++ b/catalog.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-	  <meta charset="utf-8" />
-	  <title>Техномарт</title>
+    <meta charset="utf-8">
+    <title>Техномарт</title>
   </head>
   <body>
-	  <header class="main-header">
+    <header class="main-header">
       <a class="main-header-logo" href="index.html">
-				<img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
-			</a>
+        <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
+      </a>
       <form class="search-form" method="get" action="#">
-				<label>
-					Поиск:
-					<input type="search" placeholder="Перфоратор">
-				</label>
-			</form>
+        <label class="visually-hidden" for="filter-search">Поиск</label>
+        <input type="search" placeholder="Поиск:" id="filter-search">
+        <button class="button search-button" type="submit">Найти</button>
+      </form>
       <ul class="purchase">
         <li><a href="#">Закладки: 0</a></li>
         <li><a href="#">Корзина: 10</a></li>
@@ -57,29 +56,29 @@
 
       <section class="filters">
         <h2 class="filters-heading">Фильтр:</h2>
-        <form class="filters-form" method="post" action="#">
+        <form class="filters-form" method="get" action="https://echo.htmlacademy.ru">
           <!--Фильтр цен-->
           <fieldset>
             <legend>Производители:</legend>
             <ul>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="manufacturer" value="bosch" id="filter-bosch" checked>
                 <label for="filter-bosch">BOSCH</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="interskol" id="filter-interskol">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="manufacturer" value="interskol" id="filter-interskol">
                 <label for="filter-interskol">Интерскол</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="makita" id="filter-makita" checked>
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="manufacturer" value="makita" id="filter-makita" checked>
                 <label for="filter-makita">Makita</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="dewalt" id="filter-dewalt">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="manufacturer" value="dewalt" id="filter-dewalt">
                 <label for="filter-dewalt">DeWALT</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hitachi" id="filter-hitachi">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="manufacturer" value="hitachi" id="filter-hitachi">
                 <label for="filter-hitachi">Hitachi</label>
               </li>
             </ul>
@@ -102,19 +101,19 @@
       </section>
 
       <section class="catalog">
-				<div class="catalog-sorting">
-					<h2 class="visually-hidden">Список перфораторов</h2>
-					<h3>Сортировка:</h3>
-					<ul class="sorting-type">
-						<li><a class="sorting sorting-type-active" href="#">По цене</a></li>
-						<li><a class="sorting" href="#">По типу</a></li>
-						<li><a class="sorting" href="#">По функционалу</a></li>
-					</ul>
-					<ul class="sorting-order">
-						<li><a class="ascending-order sorting-order-active" href="#">По возрастанию</a></li>
-						<li><a class="descending-order" href="#">По убыванию</a></li>
-					</ul>
-				</div>
+        <div class="catalog-sorting">
+          <h2 class="visually-hidden">Список перфораторов</h2>
+          <h3>Сортировка:</h3>
+          <ul class="sorting-type">
+            <li><a class="sorting sorting-type-active" href="#">По цене</a></li>
+            <li><a class="sorting" href="#">По типу</a></li>
+            <li><a class="sorting" href="#">По функционалу</a></li>
+          </ul>
+          <ul class="sorting-order">
+            <li><a class="ascending-order sorting-order-active" href="#">По возрастанию</a></li>
+            <li><a class="descending-order" href="#">По убыванию</a></li>
+          </ul>
+        </div>
 
         <ul class="catalog-list">
           <li class="catalog-item">
@@ -150,7 +149,7 @@
             </p>
           </li>
           <li class="catalog-item">
-						<span class="new-product">New</span>
+            <span class="new-product">New</span>
             <h3>
               <a href="#">Перфоратор BOSCH BFG 2000</a>
             </h3>
@@ -182,7 +181,7 @@
             </p>
           </li>
           <li class="catalog-item">
-						<span class="new-product">New</span>
+            <span class="new-product">New</span>
             <h3>
               <a href="#">Перфоратор BOSCH BFG 6000</a>
             </h3>
@@ -214,7 +213,7 @@
             </p>
           </li>
           <li class="catalog-item">
-						<span class="new-product">New</span>
+            <span class="new-product">New</span>
             <h3>
               <a href="#">Перфоратор BOSCH BFG 3000</a>
             </h3>
@@ -261,7 +260,7 @@
               <a href="#">В закладки</a>
             </p>
           </li>
-				</ul>
+        </ul>
 
         <ul class="pagination-list">
           <li class="pagination-item pagination-item-current">1</li>
@@ -282,8 +281,8 @@
     </main>
     <footer class="main-footer">
       <a class="footer-logo" href="index.html">
-				<img src="img/logo-technomart.svg" width="137" height="22" alt="Логотип интернет-магазина «Техномарт»">
-			</a>
+        <img src="img/logo-technomart.svg" width="137" height="22" alt="Логотип интернет-магазина «Техномарт»">
+      </a>
       <p class="footer-contacts">
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
         <a href="tel:+78125550555">+7 (812) 555-05-55</a>
