Добавлены недостающие атрибуты

--- a/catalog.html
+++ b/catalog.html
@@ -9,9 +9,9 @@
       <a class="main-header-logo" href="index.html">
         <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
       </a>
-      <form class="search-form" method="get" action="#">
+      <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
         <label class="visually-hidden" for="filter-search">Поиск</label>
-        <input type="search" placeholder="Поиск:" id="filter-search">
+        <input type="search" name="search" placeholder="Поиск:" id="filter-search">
         <button class="button search-button" type="submit">Найти</button>
       </form>
       <ul class="purchase">
@@ -321,7 +321,7 @@
       <h2 class="visually-hidden">Уведомление</h2>
       <p class="modal-cart-info">Товар добавлен в корзину!</p>
       <a class="button" href="#">Оформить заказ</a>
-      <a class="button button-continue" href="#">Продолжить покупки</a>
+      <button class="button button-continue" type="button">Продолжить покупки</button>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
