--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <a class="main-header-logo">
         <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
       </a>
-      <form class="search-form" method="get" action="#">
+      <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
         <label class="visually-hidden" for="filter-search">Поиск</label>
-        <input type="search" placeholder="Поиск:" id="filter-search">
+        <input type="search" name="search" placeholder="Поиск:" id="filter-search">
         <button class="button search-button" type="submit">Найти</button>
       </form>
       <ul class="purchase">
