Доработана форма обратной связи

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
       </a>
       <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
         <label class="visually-hidden" for="filter-search">Поиск</label>
-        <input type="search" name="search" placeholder="Поиск:" id="filter-search">
+        <input type="search" name="search" placeholder="Поиск:" id="filter-search" required>
         <button class="button search-button" type="submit">Найти</button>
       </form>
       <ul class="purchase">
