--- a/catalog.html
+++ b/catalog.html
@@ -339,12 +339,11 @@
       </p>
     </footer>
 
-    <section class="modal modal-cart-notification">
-      <h2 class="visually-hidden">Уведомление</h2>
+    <div class="modal modal-cart-notification">
       <p class="modal-cart-info">Товар добавлен в корзину!</p>
       <a class="button" href="#">Оформить заказ</a>
       <button class="button button-continue" type="button">Продолжить покупки</button>
       <button class="modal-close" type="button">Закрыть</button>
-    </section>
+    </div>
   </body>
 </html>
