--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                   <button class="slide-control">2</button>
                 </li>
               </ul>
-              <button class="slide-btn-back">&lt;</button>
-              <button class="slide-btn-next">&gt;</button>
+              <button class="slide-btn-back">Предыдущий слайд</button>
+              <button class="slide-btn-next">Следующий слайд</button>
             </div>
           </li>
         </ul>
