Добавлена базовая стилизация оставшихся блоков
Стилизация следующих секций: промо-блок, популярные товары, популярные производители, сервисы, сортировка.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -52,24 +51,24 @@
       <section class="promo">
         <h2 class="visually-hidden">Категории товаров и услуг</h2>
         <ul class="categories">
-          <li>
+          <li class="promo-item promo-materials">
             <h3>Материалы</h3>
             <a class="button button-promo" href="#">На любой вкус</a>
             <span class="new-product">New</span>
           </li>
-          <li>
+          <li class="promo-item promo-tools">
             <h3>Инструмент</h3>
             <a class="button button-promo" href="#">На все случаи</a>
           </li>
-          <li>
+          <li class="promo-item promo-machinery">
             <h3>Техника</h3>
             <a class="button button-promo" href="#">Для стройки</a>
           </li>
-          <li>
+          <li class="promo-item promo-sale">
             <h3>Скидки 50%</h3>
             <a class="button button-promo" href="#">На 350 товаров</a>
           </li>
-          <li>
+          <li class="promo-item promo-delivery">
             <h3>Доставка</h3>
             <a class="button button-promo" href="#">Бесплатно</a>
           </li>
